<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clr1"
    tools:context=".Activities.Eligibility">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/clr4"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/logo"
                android:contentDescription="TODO"
                tools:srcCompat="@drawable/logo" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/eligibility_criteria"
        android:textColor="@color/clr3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/a_handicapped_person_who_satisfies_the_below_following_criteria_would_be_eligible_for_assistance_under_adip_scheme"
        android:textColor="@color/clr3"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxEligibility"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/arrow"
                android:fontFamily="sans-serif-medium"
                android:text="@string/must_be_a_citizen_of_india_under_any_age_group"
                android:textColor="@color/clr3"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/arrow"
                android:fontFamily="sans-serif-medium"
                android:text="@string/applicant_must_hold_a_copy_of_disability_certificate_with_40"
                android:textColor="@color/clr3"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/arrow"
                android:fontFamily="sans-serif-medium"
                android:text="@string/applicant_s_monthly_income_from_all_sources_must_not_exceed_the_value_of_rs_20_000_per_month"
                android:textColor="@color/clr3"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/arrow"
                android:fontFamily="sans-serif-medium"
                android:text="@string/in_the_case_of_dependents_the_income_of_parents_or_guardians_must_not_exceed_the_value_of_rs_20_000_per_month"
                android:textColor="@color/clr3"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/arrow"
                android:fontFamily="sans-serif-medium"
                android:text="@string/those_who_are_not_receiving_any_assistance_from_the_government_and_non_official_organisations_for_the_past_three_years_for_the_same_object_from_any_source_are_eligible_to_apply_for_this_scheme_however_for_the_children_under_12_years_of_age_group_the_limit_would_be_restricted_for_one_year"
                android:textColor="@color/clr3"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/LoginContinue"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_back1"
        android:text="@string/continueText"
        android:textColor="@color/clr3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxEligibility"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="I agree to all terms and conditions.And all the aforesaid information is correct upto my knowledge.If found false,I would be debarred from all benefits of this scheme."
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/LoginContinue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        android:textColor="@color/clr3" />
</androidx.constraintlayout.widget.ConstraintLayout>