<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clr1"
    tools:context=".Activities.RegisterPage1">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/clr4"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/logo"
                tools:srcCompat="@drawable/logo" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/Register1Next"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/button_back1"
        android:text="NEXT"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/Register1Next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="25dp"
                android:text="Name"
                android:textColor="@color/clr3"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="2dp"
                android:background="@drawable/text"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColorHint="@color/clr5"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="25dp"
                android:text="@string/gender"
                android:textColor="@color/clr3"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/Female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:alpha="0.8"
                    android:backgroundTintMode="multiply"
                    app:srcCompat="@drawable/female_icon" />

                <ImageView
                    android:id="@+id/Male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:alpha="0.8"
                    app:srcCompat="@drawable/male_icon" />
            </LinearLayout>

            <EditText
                android:id="@+id/UserAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/text"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/age"
                android:inputType="number"
                android:padding="10dp"
                android:textColorHint="@color/clr5"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="25dp"
                android:text="@string/phone_number"
                android:textColor="@color/clr3"
                android:textSize="18sp" />

            <com.chaos.view.PinView
                android:id="@+id/UserPhoneNumber"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:cursorVisible="true"
                android:inputType="number"
                android:itemBackground="@color/clr4"
                android:pointerIcon="alias"
                app:itemCount="10"
                app:itemHeight="50dp"
                app:itemRadius="10dp"
                app:itemSpacing="3dp"
                app:itemWidth="25dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="25dp"
                android:text="@string/state"
                android:textColor="@color/clr3"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/UserState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/text"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/state"
                android:padding="10dp"
                android:textColorHint="@color/clr5"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="25dp"
                android:text="@string/city"
                android:textColor="@color/clr3"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/UserCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/text"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/city"
                android:padding="10dp"
                android:textColorHint="@color/clr5"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                android:text="@string/address"
                android:textColor="@color/clr3"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/UserAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/text"
                android:drawableEnd="@drawable/location"
                android:ems="10"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/address"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColorHint="@color/clr5"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/postal_code"
                android:textColor="@color/clr3"
                android:textSize="20sp" />

            <com.chaos.view.PinView
                android:id="@+id/UserPostalCode"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/clr5"
                android:inputType="number"
                app:itemCount="6"
                app:itemHeight="40dp"
                app:itemRadius="10dp"
                app:itemSpacing="5dp"
                app:itemWidth="25dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="25dp"
                android:text="@string/password"
                android:textColor="@color/clr3"
                android:textSize="20sp" />

            <com.chaos.view.PinView
                android:id="@+id/userPasswordRegister"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/clr5"
                android:cursorVisible="true"
                android:inputType="number"
                android:pointerIcon="alias"
                app:itemCount="6"
                app:itemHeight="40dp"
                app:itemRadius="10dp"
                app:itemSpacing="5dp"
                app:itemWidth="25dp"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>